<resources>
    <string name="app_name">ASProj</string>

    <string name="if_home">&#xe8c6;</string>
    <string name="if_recommend">&#xe63f;</string>
    <string name="if_chat">&#xe63c;</string>
    <string name="if_profile">&#xe634;</string>
    <string name="if_category">&#xe600;</string>
    <string name="if_favorite">&#xe639;</string>
    <string name="if_favorite1">&#xe620;</string>

    <string name="if_unexpected">&#xe606;</string>
    <string name="if_unexpected1">&#xe692;</string>
    <string name="if_empty">&#xe601;</string>
    <string name="if_wifi_error">&#xe876;</string>
    <string name="if_wifi_error1">&#xe501;</string>
    <string name="if_back">&#xe607;</string>
    <string name="if_error_tips">&#xe648;</string>
    <string name="if_back_soild">&#xe680;</string>

    <string name="if_notify">&#xe654;</string>
    <string name="if_history">&#xe606;</string>
    <string name="if_address">&#xe603;</string>
    <string name="if_collection">&#xe604;</string>
    <string name="if_search">&#xe987;</string>
    <string name="if_clear">&#xe60b;</string>
    <string name="if_delete">&#xe60a;</string>
    <string name="if_empty1">&#xe637;</string>
    <string name="if_empty2">&#xe6cf;</string>
    <string name="if_empty3">&#xe60c;</string>
    <string name="if_history2">&#xe6d0;</string>
    <string name="if_notice_msg">&#xe609;</string>
    <string name="if_notice_recommend">&#xe608;</string>
    <string name="if_goods">&#xe6d1;</string>
    <string name="if_share">&#xe60d;</string>
    <string name="if_shop">&#xe895;</string>
    <string name="if_like">&#xe60e;</string>
    <string name="if_add">&#xe62b;</string>
    <string name="if_location">&#xe60f;</string>
    <string name="if_close">&#xe611;</string>
    <string name="if_checked">&#xe612;</string>
    <string name="if_checked2">&#xe62c;</string>
    <string name="if_right_arrow">&#xe669;</string>
    <string name="if_alipay">&#xe674;</string>
    <string name="if_wxpay">&#xe62d;</string>
    <string name="degrade_title">错误提示</string>
    <string name="degrade_tip">页面跑远了，开发小哥哥正在修复...</string>
    <string name="title_login">登录</string>
    <string name="title_apply">提交</string>
    <string name="title_register">注册</string>
    <string name="input_item_title_user_name">用户名</string>
    <string name="input_item_hint_user_name">请输入用户名</string>
    <string name="login_desc_forget_pwd">提示：如果你忘记了密码，重新注册即可</string>
    <string name="input_item_hint_user_password">请输入密码</string>
    <string name="input_item_login_user_password">密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="input_item_title_course_order_id">课程的订单号</string>
    <string name="input_item_hint_course_order_id">请输入课程订单号后四位</string>
    <string name="input_item_title_mooc_id">慕课网ID</string>
    <string name="input_item_hint_mooc_id">请输入慕课网用户ID</string>
    <string name="input_item_title_username">用户名</string>
    <string name="input_item_hint_username">请输入用户名</string>
    <string name="input_item_hint_password">请输入密码</string>
    <string name="input_item_hint_repassword">请再次输入密码</string>
    <string name="input_item_title_password">密码</string>
    <string name="input_item_title_repassword">确认密码</string>
    <string name="profile_login_desc_welcome_back">进阶学习中的移动端开发工程师</string>
    <string name="item_course_text">课程公告</string>
    <string name="item_collection_text">我的收藏</string>
    <string name="item_address_text">收货地址</string>
    <string name="item_history_text">游览历史</string>
    <string name="profile_not_login">请先登录</string>
    <string name="profile_login_desc">解锁全部功能，畅想架构师福利</string>
    <string name="profile_tab_item_collection">\n收藏</string>
    <string name="profile_tab_item_history">\n历史游览</string>
    <string name="profile_tab_item_learn">\n学习时长</string>
    <string name="home_search_hint"> &#xe987; 搜索你想要的商品</string>
    <string name="title_category">分类</string>
    <string name="fetch_user_profile_fail">用户信息获取失败</string>
    <string name="shop_desc">商品数量:%s以拼:%s</string>
    <string name="item_similar_title">相似商品</string>
    <string name="detail_favorite_success">收藏成功</string>
    <string name="detail_favorite_cancel">取消收藏成功</string>
    <string name="detail_order_action">立即购买</string>
    <string name="title_notice">公告</string>
    <string name="title_activity_mvvm_login">MvvmLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>