<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@color/color_white">

            <com.example.common.ui.view.IconFontTextView
                android:id="@+id/action_back"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/if_back"
                android:textSize="@dimen/dp_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/title_login"
                android:textColor="@color/color_000"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/action_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_6"
                android:gravity="center"
                android:padding="@dimen/dp_10"
                android:text="@string/title_register"
                android:textColor="@color/color_298"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_d1d2" />

        <com.example.common.ui.view.InputItemLayout
            android:id="@+id/input_item_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color_white"
            android:paddingLeft="@dimen/dp_16"
            app:bottomLineTextAppearance="@style/leftMargin_lineAppearance"
            app:hint="@string/input_item_hint_user_name"
            app:inputTextAppearance="@style/inputTextAppearance"
            app:title="@string/input_item_title_user_name"
            app:titleTextAppearance="@style/titleTextAppearance"
            app:topLineTextAppearance="@style/lineAppearance" />

        <com.example.common.ui.view.InputItemLayout
            android:id="@+id/input_item_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:paddingLeft="@dimen/dp_16"
            app:bottomLineTextAppearance="@style/lineAppearance"
            app:hint="@string/input_item_hint_user_password"
            app:inputTextAppearance="@style/inputTextAppearance"
            app:inputType="password"
            app:title="@string/input_item_login_user_password"
            app:titleTextAppearance="@style/titleTextAppearance" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_58"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/title_login"
            android:textColor="@color/white"

            android:textSize="@dimen/sp_16"
            app:cornerRadius="@dimen/dp_6" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/login_desc_forget_pwd"
            android:textColor="@color/color_646"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>
</layout>